--- a/now.json
+++ b/now.json
@@ -1,3 +1,10 @@
 {
-    "name": "<angular-news>"
-  }
+  "version": 2,
+  "name": "my-new-app",
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@now/static-build"
+    }
+  ]
+}
